// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zod Error handling and error formatting should be failed 1`] = `
Array [
  Object {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected string, received number",
    "path": Array [
      "name",
    ],
    "received": "number",
  },
]
`;

exports[`zod Error handling and error formatting should be failed 2`] = `
Object {
  "_errors": Array [],
  "name": Object {
    "_errors": Array [
      "Expected string, received number",
    ],
  },
}
`;

exports[`zod changePasswordSchema should be failed 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "oldPassword"
    ]
  },
  {
    "code": "custom",
    "path": [
      "confirmationPassword"
    ],
    "message": "confirmationPassword does not match."
  }
]]
`;

exports[`zod discriminatedUnion should be failed 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "a"
    ],
    "message": "Required"
  }
]]
`;

exports[`zod discriminatedUnion should be failed 2`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "b"
    ],
    "message": "Required"
  }
]]
`;

exports[`zod loginSchema should be failed 1`] = `
[ZodError: [
  {
    "validation": "email",
    "code": "invalid_string",
    "message": "Invalid email",
    "path": [
      "email"
    ]
  },
  {
    "code": "too_big",
    "maximum": 16,
    "type": "string",
    "inclusive": true,
    "message": "String must contain at most 16 character(s)",
    "path": [
      "password"
    ]
  },
  {
    "code": "custom",
    "message": "password must include capital letter and small letter.",
    "path": [
      "password"
    ]
  },
  {
    "code": "custom",
    "message": "password must include alphanumeric.",
    "path": [
      "password"
    ]
  },
  {
    "code": "custom",
    "message": "password must include special character.",
    "path": [
      "password"
    ]
  }
]]
`;

exports[`zod refine and superRefine should be failed 1`] = `
[ZodError: [
  {
    "code": "too_big",
    "maximum": 3,
    "type": "array",
    "inclusive": true,
    "message": "Too many items 😡",
    "path": []
  }
]]
`;

exports[`zod refine and superRefine should be failed 2`] = `
[ZodError: [
  {
    "code": "custom",
    "message": "No duplicated allowed.",
    "path": []
  }
]]
`;

exports[`zod transform should be failed 1`] = `
[ZodError: [
  {
    "code": "custom",
    "message": "Not a number",
    "path": []
  }
]]
`;
